2008-08-02  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/bugs.texi: documented SELinux issues
	* tests/testsuite-inet_tcp.at: expect failures when Enforcing

2008-07-27  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* doc/manual/strinet.texi: no invariant sections for debian
	* m4/.cvsignore: more libtool files to ignore

2008-07-23  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: corrections for 2.6.18-92.1.6.el5 kernel
	* doc/man/strinet.refs: update references
	* doc/papers/testresults.tex: correct typos
	* src/drivers/rawip.c: corrections for 2.6.18-92.1.6.el5 kernel
	* src/drivers/tcp.c: corrections for 2.6.18-92.1.6.el5 kernel
	* src/drivers/udp.c: corrections for 2.6.18-92.1.6.el5 kernel

2008-06-18  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strinet.refs: update references

2008-05-05  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/inet.c: be strict with MORE_flag
	* src/drivers/rawip.c: be strict with MORE_flag
	* src/drivers/tcp.c: be strict with MORE_flag
	* src/drivers/udp.c: be strict with MORE_flag

2008-05-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* strinet.lsm.in: updates for release
	* strinet.spec.in: updates for release
	* debian/mscript_header.in: updates for release
	* debian/rules.in: updates for release
	* debian/strinet-core.postinst.in: updates for release
	* debian/strinet-core.postrm.in: updates for release
	* debian/strinet-core.preinst.in: updates for release
	* debian/strinet-core.prerm.in: updates for release
	* debian/strinet-init.postinst.in: updates for release
	* debian/strinet-init.preinst.in: updates for release

2008-05-03  Brian Bidulock  <bidulock@openss7.org>
