@@ -1,5 +1,7 @@
 2008-08-02  Brian Bidulock  <bidulock@openss7.org>
 
+	* doc/papers/Makefile.am: no variables in EXTRA_DIST
+
 	* doc/manual/bugs.texi: documented SELinux issues
 	* tests/testsuite-inet_tcp.at: expect failures when Enforcing
 
